<resources>
    <string name="app_name">BG player</string>
    <string name="broadcast_receiver_filter_key">BGPlayerBroadcastReceiverFilterKey</string>
    <string name="broadcast_receiver_filter">BGPlayer</string>
    <string name="action_about">About me</string>
    <string name="action_color_picker">Color picker</string>
    <string name="favorite_watched_tab">Recently watched</string>
    <string name="recently_watched_tab">Recently watched</string>
    <string name="search_tab">Search YouTube</string>
    <string name="playlists_tab">Playlists</string>

    <string name="search_hint">Search YouTube</string>

    <string name="action_search">Search</string>

    <string name="nav_item_home">Home</string>
    <string name="nav_item_friends">Friends</string>
    <string name="nav_item_notifications">Messages</string>

    <!-- navigation drawer item labels  -->
    <string-array name="nav_drawer_labels">
        <item>@string/nav_item_home</item>
        <item>@string/nav_item_friends</item>
        <item>@string/nav_item_notifications</item>
    </string-array>

    <string name="clear_list">Clear recently played list</string>

    <string name="email">kan4649kan@gmail.com</string>
    <string name="git_url">https://github.com/kkkkan/Android-YouTube-Background-Player</string>
    <string name="date">Mar. 2018</string>
    <string name="myName">kkkkan</string>

    <string name="number_of_videos">Number of videos:</string>
    <string name="status">Status:</string>
    <string name="all_permissions_request">このアプリでYouTubeアカウント(Googleアカウント)にログインして連携するには連絡先と電話の許可が必要です。\n
        YouTubeアカウントと連携しなくてもアプリは使えますがYouTubeで登録しているプレイリストの使用や編集はできません。
        \nまた今許可やログインは行わなくても、アプリ右上のボタンを押すと出てくるログインボタンタブで、いつでも許可の付与やログイン、ログインしているアカウントの変更が出来ます。</string>
    <string name="permissions_request">このアプリでYouTubeアカウントにログインして連携するには連絡先と電話の許可が必要です。\n(YouTubeアカウントにログインしなくてもアプリ自体は使用できますがプレイリストの使用や作成や編集はできません。)</string>
    <string name="ok">ok</string>
    <string name="choose_colors">Choose background and text color</string>
    <string name="cancel">cancel</string>
    <string name="failed_playback">Playback failed!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="list_empty">List is empty!</string>

    <string name="ask_delete_all_recetry_list">履歴をすべて消しますか？</string>
    <string name="video_quality_setting_success">画質の設定を登録いたしました。\nこの設定は次に再生するビデオから適応されます。</string>
    <string name="video_quality_setting_fail">画質設定に失敗しました。</string>
    <string name="video_read_fail">ビデオが読み込めませんでした。次のビデオを再生します。\nヒント:何度も失敗するようなら、画質の設定を変更すると読み込めるかもしれません。</string>

    <string name="no_playinglist">これから再生予定のビデオのリストはありません。\nビデオの再生を始めると、この画面で再生予定のビデオのリストを確認できます。</string>

    <string name="video">ビデオ</string>
    <string name="playlist">プレイリスト</string>
</resources>
