<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@android:drawable/ic_menu_search"
        android:orderInCategory="100"
        android:title="@string/action_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_clear_list"
        android:orderInCategory="100"
        android:title="@string/clear_list"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:title="@string/action_about"
        app:showAsAction="never" />

    <!-- <item
         android:id="@+id/action_color_picker"
         android:orderInCategory="100"
         android:title="@string/action_color_picker"
         app:showAsAction="never" />-->

    <item
        android:id="@+id/log_in"
        android:orderInCategory="100"
        android:title="log in"
        app:showAsAction="never" />

    <item
        android:id="@+id/video_quality"
        android:orderInCategory="100"
        android:title="video quality"
        app:showAsAction="never" />

</menu>
